...
                      fontSize: 17.0)),
            ),

            //aqui va el boton de inicio
            createButton(
                context: context,
                labelButton: "Iniciar sesion",
                color: orange,
                func: () {
                  Navigator.pushNamed(context, "login");
                }),

            //Aqui el otro boton
...
